@@ -2,7 +2,7 @@
 #
 # Description : MAME4ALL for Pi by Squid
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.4 (5/Apr/15)
+# Version     : 1.5 (18/Apr/16)
 # Compatible  : Raspberry Pi 1 & 2 (tested)
 #
 clear
@@ -13,6 +13,13 @@ check_board || { echo "Missing file helper.sh. I've tried to download it for you
 INSTALL_DIR="$HOME/games/mame4allpi"
 URL_FILE="http://sourceforge.net/projects/mame4allpi/files/latest/download?source=files"
 ROMS_URL="http://download.freeroms.com/mame_roms/c/commando.zip"
+
+mkDesktopEntry() {
+	if [[ ! -e /usr/share/applications/mame.desktop ]]; then
+        sudo wget http://img.app-island.com/article/22/34/icon.png -O /usr/share/pixmaps/mame.png
+		sudo sh -c 'echo "[Desktop Entry]\nName=MAME\nComment=Multiple Arcade Machine Emulator\nExec='$HOME'/games/mame4allpi/mame\nIcon=/usr/share/pixmaps/mame.png\nTerminal=false\nType=Application\nCategories=Application;Game;\nPath='$HOME'/games/mame4allpi/" > /usr/share/applications/mame.desktop'
+	fi
+}
 
 playgame()
 {
@@ -28,6 +35,7 @@ install()
         mkdir -p $INSTALL_DIR && cd $_
         wget -qO- -O $INSTALL_DIR/tmp.zip $URL_FILE && unzip -o $INSTALL_DIR/tmp.zip && rm $INSTALL_DIR/tmp.zip
         wget -P $INSTALL_DIR/roms $ROMS_URL
+        mkDesktopEntry
         playgame
     fi
     echo "Done!. To play go to install path, copy any rom to /roms directory and type: ./mame"
