@@ -2,15 +2,22 @@
 #
 # Description : Portable ZX-Spectrum emulator by JFroco
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.3 (17/Apr/15)
+# Version     : 1.4 (18/Apr/16)
 # Compatible  : Raspberry Pi 1 & 2 (tested)
-# 
+#
 # To do       : Add ZEsarUX: http://sourceforge.net/projects/zesarux/files/ZEsarUX-2.1/ZEsarUX_bin-2.1-raspbian7.tar.gz/download
 #
 clear
 
 INSTALL_DIR="/home/$USER/games/"
 URL_FILE="https://bitbucket.org/djdron/unrealspeccyp/downloads/unreal-speccy-portable_0.0.64_rpi.zip"
+
+mkDesktopEntry() {
+	if [[ ! -e /usr/share/applications/speccy.desktop ]]; then
+        sudo wget http://quantum-bits.org/tango/icons/computer-sinclair-zx-spectrum.png -O /usr/share/pixmaps/spectrum.png
+		sudo sh -c 'echo "[Desktop Entry]\nName=Speccy (ZX Spectrum)\nComment=Speccy emulates some versions of Sinclair ZX Spectrum.\nExec='$INSTALL_DIR'/usp_0.0.64/unreal_speccy_portable\nIcon=/usr/share/pixmaps/spectrum.png\nTerminal=false\nType=Application\nCategories=Application;Game;\nPath='$HOME'/usp_0.0.64/unreal_speccy_portable/" > /usr/share/applications/speccy.desktop'
+	fi
+}
 
 validate_url()
 {
@@ -42,6 +49,7 @@ install()
         cd us*
         chmod +x unreal_speccy_portable
         wget -O $INSTALL_DIR/usp_0.0.64/ninjajar.tap http://www.mojontwins.com/juegos/mojon-twins--ninjajar-eng-v1.1.tap
+        mkDesktopEntry
     fi
     echo "Done!. To play go to install path, copy any .tap file to directory and type: ./unreal_speccy_portable <game name>"
     playgame
