@@ -1,3 +1,8 @@
+(18/04/16)
+==========
+
+· Added desktop icons to MAME, Speccy
+
 (29/03/16)
 ==========
 
